--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.2.0
-  firebase_core: ^2.7.0  
+  firebase_core: ^2.7.0
+  file_picker: ^5.2.5
+  firebase_storage: ^11.0.14
+  image_picker: ^0.8.6+4
 
 dev_dependencies:
   flutter_test:
